--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link />
+    <title>Kat Kimani Favorite Kats</title>
+</head>
+<!-- This is a comment! -->
+
+<body> Hi Kats. How are you on a Saturday</body>
+
+
+</html>
