--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <link />
-    <title>Kat Kimani Favorite Kats</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>My Site Title</title>
 </head>
 <!-- This is a comment! -->
 
